# google-cloud-rust

./: Cargo.toml
cloud-tasks/: Cargo.toml
cloud-tasks/src/: apiv2.rs  client.rs  lib.rs  task.rs
cloud-tasks/src/apiv2/: client.rs  conn_pool.rs
foundation/auth/: Cargo.toml
foundation/metadata/: Cargo.toml
googleapis/: Cargo.toml  build.rs
googleapis/src/: google.pubsub.v1.rs  google.spanner.admin.database.v1.rs  lib.rs
googleapis/src/bytes/: google.cloud.tasks.v2.rs  google.pubsub.v1.rs
